fix collapse bar styling index

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
     padding-bottom: 0px;
 }
 
+
+
 /* body background*/
 body{
     background-color: #ededed;
@@ -69,3 +71,13 @@ p{
     width:50%;
     padding:10px;
   }
+
+/* nav collapse bar color change*/
+@media(max-width:990px){
+    .navbar.bg-white{
+        background-color: #4aaaa5 !important;  
+    }
+
+
+}
+
